Changes to Controller Admin
Updated assemblies and modules

Controller Admin Guide UI updates chapters 11-20

https://issues.redhat.com/browse/AAP-23677

--- a/downstream/assemblies/platform/assembly-controller-improving-performance.adoc
+++ b/downstream/assemblies/platform/assembly-controller-improving-performance.adoc
@@ -2,16 +2,16 @@
 
 = Performance tuning for {ControllerName}
 
-Tune your {ControllerName} to optimize performance and scalability. When planning your workload, ensure that you identify your performance and scaling needs, adjust for any limitations, and monitor your deployment. 
+Tune your {ControllerName} to optimize performance and scalability. 
+When planning your workload, ensure that you identify your performance and scaling needs, adjust for any limitations, and monitor your deployment. 
 
 {ControllerNameStart} is a distributed system with multiple components that you can tune, including the following:
 
-* Task system in charge of scheduling jobs
-* Control Plane in charge of controlling jobs and processing output
-* Execution plane where jobs run
-* Web server in charge of serving the API
-* Websocket system that serve and broadcast websocket connections and data
-* Database used by multiple components
+* Task system in charge of scheduling jobs.
+* Control Plane in charge of controlling jobs and processing output.
+* Web server in charge of serving the API.
+* Websocket system that serve and broadcast websocket connections and data.
+* Database used by multiple components.
 
 include::platform/ref-controller-capacity-planning.adoc[leveloffset=+1]
 include::platform/ref-controller-workload-characteristics.adoc[leveloffset=+2]
