--- a/downstream/assemblies/platform/assembly-controller-log-files.adoc
+++ b/downstream/assemblies/platform/assembly-controller-log-files.adoc
@@ -2,7 +2,7 @@
 
 = {ControllerNameStart} logfiles
 
-{ControllerNameStart} logfiles can be accessed from two centralized locations:
+You can access {ControllerName} logfiles from two centralized locations:
 
 * `/var/log/tower/`
 * `/var/log/supervisor/`
@@ -16,7 +16,7 @@ In the `/var/log/tower/` directory, you can view logfiles captured by:
 * *management_playbooks.log:* Captures the logs of management playbook runs, and isolated job runs such as copying the metadata.
 * *rsyslog.err:* Captures rsyslog errors authenticating with external logging services when sending logs to them.
 * *task_system.log:* Captures the logs of tasks that {ControllerName} is running in the background, such as adding cluster instances and logs related to information gathering or processing for analytics.
-* *tower_rbac_migrations.log:* Captures the logs for rbac database migration or upgrade.
+* *tower_rbac_migrations.log:* Captures the logs for RBAC database migration or upgrade.
 * *tower_system_tracking_migrations.log:* Captures the logs of the controller system tracking migration or upgrade.
 * *wsbroadcast.log:* Captures the logs of websocket connections in the controller nodes.
 
