--- a/downstream/assemblies/platform/assembly-controller-logging-aggregation.adoc
+++ b/downstream/assemblies/platform/assembly-controller-logging-aggregation.adoc
@@ -3,7 +3,7 @@
 = Logging and Aggregation
 
 Logging provides the capability to send detailed logs to third-party external log aggregation services.
-Services connected to this data feed serve as a means of gaining insight into {ControllerName} use or technical trends. 
+Services connected to this data feed are a means of gaining insight into {ControllerName} use or technical trends. 
 The data can be used to analyze events in the infrastructure, monitor for anomalies, and correlate events in one service with events in another. 
 
 The types of data that are most useful to {ControllerName} are job fact data, job events or job runs, activity stream data, and log messages. 
