--- a/downstream/modules/platform/con-controller-understand-architecture.adoc
+++ b/downstream/modules/platform/con-controller-understand-architecture.adoc
@@ -3,7 +3,7 @@
 = Understand the architecture of {PlatformNameShort} and {ControllerName}
 
 {PlatformNameShort} and {ControllerName} comprise a general-purpose, declarative automation platform. 
-That means that once an Ansible playbook is launched (by {ControllerName}, or directly on the command line), the playbook, inventory, and credentials provided to Ansible are considered to be the source of truth. 
+That means that once an Ansible playbook is launched (by {ControllerName}, by {Navigator}, or directly on the command line), the playbook, inventory, and credentials provided to Ansible are considered to be the source of truth. 
 If you want policies around external verification of specific playbook content, job definition, or inventory contents, you must complete these processes before the automation is launched, either by the {ControllerName} web UI, or the {ControllerName} API.
 
 The use of source control, branching, and mandatory code review is best practice for Ansible automation. 
