--- a/downstream/modules/platform/proc-controller-authentication.adoc
+++ b/downstream/modules/platform/proc-controller-authentication.adoc
@@ -7,7 +7,7 @@ Once you create and register your developer application with the appropriate ser
 
 .Procedure
 //[ddacosta] For 2.5, this will change to Access Management > Authentication
-. From the navigation panel, select {MenuAEAdminSettings}.
+. From the navigation panel, select {MenuAMAuthentication}.
 . Select from the following *Authentication* options:
 
 * xref:controller-set-up-azure[Azure AD settings]
