--- a/downstream/modules/platform/proc-controller-configure-usability-analytics.adoc
+++ b/downstream/modules/platform/proc-controller-configure-usability-analytics.adoc
@@ -8,18 +8,22 @@ Only users installing a trial of {PlatformName} or a fresh installation of {Cont
 
 {ControllerNameStart} collects user data automatically to help improve the product.
 //[ddacosta]Modified this sentence since the procedure explains how to get to the UI settings.
-You can opt out or control the way {ControllerName} collects data by setting your participation level in the *User Interface settings*.
+//You can opt out or control the way {ControllerName} collects data by setting your participation level in the *User Interface settings*.
 
 .Procedure
 
-. From the navigation panel, select {MenuAEAdminSettings}.
-. Select *User Interface settings* from the *User Interface* options.
+. From the navigation panel, select {MenuSetSystem}.
 . Click btn:[Edit].
-. Select the desired level of data collection from the *User Analytics Tracking State* list:
-* *Off*: Prevents any data collection.
-* *Anonymous*: Enables data collection without your specific user data.
-* *Detailed*: Enables data collection including your specific user data.
-. Click btn:[Save] to apply the settings or btn:[Cancel] to abandon the changes.
+. Select the *Gather data for {Analytics}* checkbox.
+. Enter the following information:
+* *Last gather data for {Analytics}*: Set the date and time.
+//No tool tip for the next one. This is a guess.
+* *Last gathered entries from the data collection service of {Analytics}*: Enter the data and time data was last gathered.
+* *{Analytics} Gather Interval*: Interval (in seconds) between data gathering.
+//The following are marked with a red asterisk, it doesn't explain why.
+* *Last cleanup date for HostMetrics*: Set the date and time.
+* *Last computing date of HostMetricsSummaryMonthly*: Set the date and time.
+. Click btn:[Save] to apply the settings.
 
 .Additional resources
 
