--- a/downstream/modules/platform/proc-controller-configure-user-interface.adoc
+++ b/downstream/modules/platform/proc-controller-configure-user-interface.adoc
@@ -1,11 +1,21 @@
 [id="controller-configure-user-interface"]
 
-= Configuring the user interface
+= Configuring the user preferences
 
-The *User Interface* tab enables you to set {ControllerName} analytics settings, and configure custom logos and login messages.
+//The *User Interface* tab enables you to set {ControllerName} analytics settings, and configure custom logos and login messages.
 
 .Procedure
 
-. From the navigation panel, select {MenuAEAdminSettings}.
-. Select *User Interface settings* from the *User Interface* option. 
-. Click btn:[Edit] to configure your preferences.
+. From the navigation panel, select {MenuSetUserPref}.
+. You change the following settings:
+
+* *Refresh Interval*: Select the refresh interval for the page.
+This refreshes the data on the page at the selected interval.
+The refresh happens in the background and does not reload the page.
+* *Color Theme*: Select from `Dark theme`, `Light theme` or `System default`.
+* *Table Layout*: Select from `Comfortable` or 'Compact'. 
+* *Form Columns*: Select from `Multiple columns of inputs` or `Sincle column of inputs`.
+* *Form Labels*: Select from `Labels above inputs` or `Labels beside inputs`.
+* *Date Format*: Select from `Show dates as date and time` or 'Show date relative to the current time'.
+* *Preferred Data Format*: Select from `JSON` or `YAML`.
+. Click btn:[Save] to accpt your changes. 
