--- a/downstream/modules/platform/ref-controller-settings-scheduling-jobs.adoc
+++ b/downstream/modules/platform/ref-controller-settings-scheduling-jobs.adoc
@@ -2,7 +2,7 @@
 
 = Settings for scheduling jobs
 
-The task manager periodically collects tasks that need to be scheduled and determines what instances have capacity and are eligible for running them. The task manager has the following workflow:
+The task manager periodically collects tasks that must be scheduled and determines which instances have capacity and are eligible for running them. The task manager has the following workflow:
 
 . Find and assign the control and execution instances.
 . Update the job's status to waiting.
