--- a/downstream/assemblies/platform/assembly-ag-controller-config.adoc
+++ b/downstream/assemblies/platform/assembly-ag-controller-config.adoc
@@ -2,22 +2,21 @@
 
 = {ControllerNameStart} configuration
 
-You can configure {ControllerName} settings within the *Settings* screen in the following tabs:
+You can configure {ControllerName} settings from the *Systems Settings* screen in the following tabs:
 
 image::ag-settings-menu-screen.png[Settings]
 
-Each tab contains fields with a *Reset* option, enabling you to revert any value entered back to the default value.
-*Reset All* enables you to revert all the values to their factory default values.
-
-*Save* applies the changes you make, but it does not exit the edit dialog.
-To return to the *Settings* page, from the navigation panel select {MenuAEAdminSettings} or use the breadcrumbs at the top of the current view.
+Click btn:[Save] to apply the changes you make.
 
 include::platform/proc-controller-authentication.adoc[leveloffset=+1]
 include::platform/proc-controller-configure-jobs.adoc[leveloffset=+1]
 include::platform/proc-controller-configure-system.adoc[leveloffset=+1]
+//Changed at 2.5
 include::platform/proc-controller-configure-user-interface.adoc[leveloffset=+1]
+//Changes at 2.5
 include::platform/proc-controller-configure-usability-analytics.adoc[leveloffset=+2]
-include::platform/con-controller-custom-logos.adoc[leveloffset=+2]
+//Doesn't appear to be availaable at 2.5
+//include::platform/con-controller-custom-logos.adoc[leveloffset=+2]
 include::platform/con-controller-additional-settings.adoc[leveloffset=+1]
 include::platform/proc-controller-obtaining-subscriptions.adoc[leveloffset=+1]
 include::platform/con-controller-keep-subscription-in-compliance.adoc[leveloffset=+2]
