--- a/downstream/assemblies/platform/assembly-controller-isolation-function-variables.adoc
+++ b/downstream/assemblies/platform/assembly-controller-isolation-function-variables.adoc
@@ -10,7 +10,7 @@ You might find that you need to customize your playbook runs to expose additiona
 To fine tune your use of job isolation, there are certain variables that can be set.
 
 By default, {ControllerName} uses the system's `/tmp` directory as its staging area. 
-You can change this in the *Job Execution Path* field on the *Jobs settings* page, or in the REST API at `/api/v2/settings/jobs`, using:
+You can change this in the REST API at `/api/v2/settings/jobs`, using:
 
 [literal, options="nowrap" subs="+attributes"]
 ----
