--- a/downstream/modules/platform/con-controller-keep-subscription-in-compliance.adoc
+++ b/downstream/modules/platform/con-controller-keep-subscription-in-compliance.adoc
@@ -38,9 +38,9 @@ For example, if you have a subscription capacity of 10 hosts:
 = Viewing the host activity
 
 .Procedure
-//[ddacosta] I don't see a Host Metrics menu selection off the standalone navigation panel. Should it be Resources > Hosts? If so, add replace with {MenuInfrastructureHosts}
+//[ddacosta] I don't see a Host Metrics menu selection off the standalone navigation panel. Should it be Infrastructure > Hosts? If so, add replace with {MenuInfrastructureHosts}
 //[ddacosta] For 2.5 Host Metrics is off the Analytics menu. Use {MenuAAHostMetrics}
-. In the navigation panel, select menu:Host Metrics[] to view the activity associated with hosts, such as those that have been automated and deleted.
+. In the navigation panel, select {MenuAAHostMetrics} to view the activity associated with hosts, such as those that have been automated and deleted.
 +
 Each unique hostname is listed and sorted by the user's preference.
 +
