--- a/downstream/modules/platform/proc-controller-configure-jobs.adoc
+++ b/downstream/modules/platform/proc-controller-configure-jobs.adoc
@@ -2,14 +2,14 @@
 
 = Configuring jobs
 
-The *Jobs* tab enables you to configure the types of modules that can be used by the {ControllerName}'s Ad Hoc Commands feature, set limits on the number of jobs that can be scheduled, define their output size, and other details pertaining to working with jobs in {ControllerName}.
+From the navigation pane, selecting *Jobs* enables you to configure the types of modules that can be used by the {ControllerName}'s Ad Hoc Commands feature, set limits on the number of jobs that can be scheduled, define their output size, and other details pertaining to working with jobs in {ControllerName}.
 
 .Procedure
 
-. From the navigation panel, select {MenuAEAdminSettings}.
-. Select *Jobs settings* in the *Jobs* option.
+. From the navigation panel, select {MenuSetJob}.
+. On the *Jobs settings* page, click btn:[Edit].
 Set the configurable options from the fields provided.
-Click the tooltip image:question_circle.png[Tool tip,15,15] icon next to the field that you need additional information about.
+Click the tooltip image:question_circle.png[Tool tip,15,15] icon next to the field to provide additional information.
 +
 For more information about configuring Galaxy settings, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#ref-projects-galaxy-support[Ansible Galaxy Support] section of the _{ControllerUG}_.
 +
@@ -18,4 +18,4 @@ For more information about configuring Galaxy settings, see the link:{BaseURL}/r
 The values for all timeouts are in seconds.
 ====
 +
-. Click btn:[Save] to apply the settings and btn:[Cancel] to abandon the changes.
+. Click btn:[Save] to apply the settings.
