--- a/downstream/modules/platform/proc-controller-disabling-live-events.adoc
+++ b/downstream/modules/platform/proc-controller-disabling-live-events.adoc
@@ -6,4 +6,5 @@
 
 . Disable live streaming events by using one of the following methods:
 .. In the API, set `UI_LIVE_UPDATES_ENABLED` to *False*.
-.. Navigate to your {ControllerName}. Open the *Miscellaneous System Settings* window. Set the *Enable Activity Stream* toggle to *Off*.
+.. In the navigation panel, select {MenuSetSystem}.
+.. On the *System Settings* page, clear the *Enable Activity Stream* checkbox.
