--- a/downstream/modules/platform/proc-controller-set-up-logging.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-logging.adoc
@@ -5,12 +5,11 @@
 Use the following procedure to set up logging to any of the aggregator types.
 
 .Procedure
-. From the navigation panel, select {MenuAEAdminSettings}.
-. Select *Logging settings* from the list of *System* options.
+. From the navigation panel, select menu:{MenuAEAdminSettings}[Logging].
 . On the *Logging settings* screen, click btn:[Edit].
 . Set the following configurable options:
 
-* *Enable External Logging*: Click the toggle button to *ON* if you want to send logs to an external log aggregator.
+* *Enable External Logging*: Select the check box if you want to send logs to an external log aggregator.
 * *Logging Aggregator*: Enter the hostname or IP address that you want to send logs to.
 * *Logging Aggregator Port*: Specify the port for the aggregator if it requires one.
 +
@@ -27,6 +26,9 @@ image:configure-controller-system-logging-types.png[Logging types]
 
 * *Logging Aggregator Username*: Enter the username of the logging aggregator if required.
 * *Logging Aggregator Password/Token*: Enter the password of the logging aggregator if required.
+* *Loggers Sending Data to the Log Aggregator Form*: All four types of data are pre-populated by default.
+Click the tooltip image:question_circle.png[Help,15,15] icon next to the field for additional information on each data type.
+Delete the data types you do not want.
 * *Log System Tracking Facts Individually*: Click the tooltip image:question_circle.png[Help,15,15] icon for additional information, such as whether or not you want to turn it on, or leave it off by default.
 * *Logging Aggregator Protocol*: Click to select a connection type (protocol) to communicate with the log aggregator.
 Subsequent options vary depending on the selected protocol.
@@ -35,17 +37,21 @@ Subsequent options vary depending on the selected protocol.
 This option is only applicable to HTTPS and TCP log aggregator protocols.
 * *Enable/disable HTTPS certificate verification*: Certificate verification is enabled by default for the HTTPS log protocol.
 Set the toggle to *OFF* if you do not want the log handler to verify the HTTPS certificate sent by the external log aggregator before establishing a connection.
-* *Loggers to Send Data to the Log Aggregator Form*: All four types of data are pre-populated by default.
-Click the tooltip image:question_circle.png[Help,15,15] icon next to the field for additional information on each data type.
-Delete the data types you do not want.
 * *Log Format For API 4XX Errors*: Configure a specific error message. For more information, see xref:proc-controller-api-4xx-error-config[API 4XX Error Configuration].
+* *Maximum nuber of messages that can be stored in the log action queue*: Defines how large the `rsyslog` action queue can grow in number of messages stored. 
+This can have an impact on memory use. 
+When the queue reaches 75% of this number, the queue starts writing to disk. 
+When it reaches 90%, NOTICE, INFO, and DEBUG messages start to be discarded.
+* *Minimum disk persistence for rsyslog action queueing (in GB)*: Amount of data to store (in gigabytes) if an `rsyslog` action takes time to process an incoming message (defaults to 1).
+Equivalent to the `rsyslogd queue.maxdiskspace` setting on the action. 
+It stores files in the directory specified by `LOG_AGGREGATOR_MAX_DISK_USAGE_PATH`.
 
 . Review your entries for your chosen logging aggregation.
-The following example is set up for Splunk:
-+
-image:configure-controller-system-logging-splunk-example.png[Splunk logging example]
+//The following example is set up for Splunk:
+//+
+//image:configure-controller-system-logging-splunk-example.png[Splunk logging example]
 
-. Click btn:[Save] or btn:[Cancel] to abandon the changes.
+. Click btn:[Save].
 
 //Following not in published version
 //.Verification
