--- a/downstream/modules/platform/ref-controller-capacity-instance-container.adoc
+++ b/downstream/modules/platform/ref-controller-capacity-instance-container.adoc
@@ -4,11 +4,11 @@
 
 Use the `max_concurrent_jobs` and `max_forks` settings available on instance groups to limit how many jobs and forks can be consumed across an instance group or container group.
 
-* To calculate the `max_concurrent_jobs` you need on a container group consider the `pod_spec` setting for that container group. In the `pod_spec`, you can see the resource requests and limits for the automation job pod. Use the following equation to calculate the maximum concurrent jobs that you need: 
+* To calculate the `max_concurrent_jobs` required on a container group consider the `pod_spec` setting for that container group. In the `pod_spec`, you can see the resource requests and limits for the automation job pod. Use the following equation to calculate the maximum concurrent jobs that you need: 
 ----
 ((number of worker nodes in kubernetes cluster) * (CPU available on each worker)) / (CPU request on pod_spec) = maximum number of concurrent jobs
 ----
-** For example, if your `pod_spec` indicates that a pod will request 250 mcpu Kubernetes cluster has 1 worker node with 2 CPU, the maximum number of jobs that you need to start with is 8.
+** For example, if your `pod_spec` indicates that a pod will request a 250 mcpu Kubernetes cluster that has 1 worker node with 2 CPU, the maximum number of jobs that you need to start with is 8.
 * You can also consider the memory consumption of the forks in the jobs. Calculate the appropriate setting of `max_forks` with the following equation:
 ----
 ((number of worker nodes in kubernetes cluster) * (memory available on each worker)) / (memory request on pod_spec) = maximum number of forks
