--- a/downstream/modules/platform/ref-controller-capacity-planning-exercise.adoc
+++ b/downstream/modules/platform/ref-controller-capacity-planning-exercise.adoc
@@ -2,7 +2,8 @@
 
 = Example capacity planning exercise
 
-After you have determined the workload capacity that you want to support, you must plan your deployment based on the requirements of the workload. To help you with your deployment, review the following planning exercise.
+After you have determined the workload capacity that you want to support, you must plan your deployment based on the requirements of the workload. 
+To help you with your deployment, review the following planning exercise.
 
 For this example, the cluster must support the following capacity:
 
