--- a/downstream/modules/platform/ref-controller-node-types.adoc
+++ b/downstream/modules/platform/ref-controller-node-types.adoc
@@ -8,3 +8,8 @@ You can configure four types of nodes in an {ControllerName} deployment:
 * Hybrid nodes
 * Execution nodes
 * Hop nodes
+
+However, in an operator-based installation, there are no hybrid or control nodes. 
+There are container groups, which make up containers running on the Kubernetes cluster. 
+That comprises the control plane. 
+That control plane is local to the kubernetes cluster in which {PlatformName} is deployed.
