Changes to Controller Admin
Updated attributes

Controller Admin Guide UI updates chapters 11-20

https://issues.redhat.com/browse/AAP-23677

--- a/downstream/modules/platform/proc-controller-configure-usability-analytics.adoc
+++ b/downstream/modules/platform/proc-controller-configure-usability-analytics.adoc
@@ -13,7 +13,7 @@ Only users installing a trial of {PlatformName} or a fresh installation of {Cont
 .Procedure
 
 . From the navigation panel, select {MenuSetSystem}.
-. Click btn:[Edit].
+. On the *System Settings* page, click btn:[Edit].
 . Select the *Gather data for {Analytics}* checkbox.
 . Enter the following information:
 * *Last gather data for {Analytics}*: Set the date and time.
