--- a/downstream/modules/platform/proc-controller-set-up-logging.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-logging.adoc
@@ -5,7 +5,7 @@
 Use the following procedure to set up logging to any of the aggregator types.
 
 .Procedure
-. From the navigation panel, select menu:{MenuAEAdminSettings}[Logging].
+. From the navigation panel, select {MenuSetLogging}.
 . On the *Logging settings* screen, click btn:[Edit].
 . Set the following configurable options:
 
