--- a/downstream/modules/platform/ref-controller-loggers.adoc
+++ b/downstream/modules/platform/ref-controller-loggers.adoc
@@ -15,4 +15,4 @@ These loggers only use the log-level of `INFO`, except for the `awx` logger, whi
 Additionally, the standard {ControllerName} logs are deliverable through this same mechanism.
 It should be apparent how to enable or disable each of these five sources of data without manipulating a complex dictionary in your local settings file, and how to adjust the log-level consumed from the standard {ControllerName} logs.
 
-From the navigation panel, select menu:{MenuAEAdminSettings}[Logging]. You can configure the logging components in the *Logging settings* page.
+From the navigation panel, select {MenuSetLogging}. You can configure the logging components in the *Logging settings* page.
