--- a/downstream/modules/platform/ref-controller-configure-host-name-notifications.adoc
+++ b/downstream/modules/platform/ref-controller-configure-host-name-notifications.adoc
@@ -4,7 +4,7 @@
 
 In xref:controller-configure-system[System settings], you can replace `https://controller.example.com` in the *Base URL of the Service* field with your preferred hostname to change the notification hostname.
 
-i//mage:configure-controller-system-misc-baseurl.png[Edit base URL]
+//image:configure-controller-system-misc-baseurl.png[Edit base URL]
 
 Refreshing your {ControllerName} license also changes the notification hostname. 
 New installations of {ControllerName} need not set the hostname for notifications.
