--- a/downstream/modules/troubleshooting-aap/proc-troubleshoot-invalid-credentials.adoc
+++ b/downstream/modules/troubleshooting-aap/proc-troubleshoot-invalid-credentials.adoc
@@ -1,7 +1,7 @@
 [id="troubleshoot-invalid-credentials"]
 = Issue - Logging in to the {ControllerName} UI results in “Invalid username or password. Please try again.”
 
-When you try to log in to the {ControllerName} UI you cannot log in and you see the message: “Invalid username or password. Please try again.”.
+When you try to log in to the {ControllerName} UI, the login fails and you see the error message: “Invalid username or password. Please try again.”.
 
 One reason this could be happening is if the value for *Maximum number of simultaneous logged in sessions* is `0`. The *Maximum number of simultaneous logged in sessions* value determines the maximum number of sessions allowed per user per device. If this value is `0`, no users can log in to {ControllerName}.
 
