--- a/downstream/modules/troubleshooting-aap/proc-troubleshoot-use-in-controller.adoc
+++ b/downstream/modules/troubleshooting-aap/proc-troubleshoot-use-in-controller.adoc
@@ -1,7 +1,7 @@
 [id="troubleshoot-use-in-controller"]
 = Issue - Cannot select the "Use in Controller" option for {ExecEnvShort} image on {PrivateHubName}
 
-You cannot use the *Use in Controller* option for an {ExecEnvShort} image on {PrivateHubName}. You also receive the following error message: “No Controllers available”.
+You cannot use the *Use in Controller* option for an {ExecEnvShort} image on {PrivateHubName}. You also receive the error message: “No Controllers available”.
 
 To resolve this issue, connect {ControllerName} to your {PrivateHubName} instance.
 
