--- a/stories/assembly-saas-post-install-config.adoc
+++ b/stories/assembly-saas-post-install-config.adoc
@@ -2,5 +2,9 @@ ifdef::context[:parent-context: {context}]
 
 [id="saas-post-install-config"]
 = Configuring {SaaSonAWS}
+After you have subscribed to {SaaSonAWSShort} and have access to {PlatformNameShort}, you must configure your platform. 
+
+For help with configuring the platform see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html-single/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/index#idm140541758531360
+[Red Hat Ansible Automation Platform Automation Mesh for operator-based installations]
 
 :context: saas-post-install-config
