AAP-24690 Tweaked note after step 5 in Chapter 5 EDA controller user guide

--- a/downstream/modules/eda/proc-eda-set-up-token.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-token.adoc
@@ -24,7 +24,7 @@ For more information about creating the token, see the link:https://docs.ansible
 +
 [NOTE]
 ====
-The token must be in write-scope.
+The token you create must have write permissions, and the assigned user must have permission to execute job and workflow templates.
 ====
 . Select btn:[Create controller token].
 
