Changes to Controller Admin
Correction

Controller Admin Guide UI updates chapters 11-20

https://issues.redhat.com/browse/AAP-23677

--- a/downstream/modules/platform/ref-projects-collections-support.adoc
+++ b/downstream/modules/platform/ref-projects-collections-support.adoc
@@ -6,8 +6,7 @@
 If you specify a collections requirements file in the SCM at `collections/requirements.yml`, {ControllerName} installs collections in that file in the implicit project synchronization before a job run.
 
 {ControllerNameStart} has a system-wide setting that enables collections to be dynamically downloaded from the `collections/requirements.yml` file for SCM projects. 
-You can turn off this setting in the *Job Settings* screen from the navigation panel {MenuSetJob}, by switching the *Enable Collection(s) Download*
-toggle button to *Off*.
+You can turn off this setting in the *Job Settings* screen from the navigation panel {MenuSetJob}, by unsetting *Enable Collection(s) Download*.
 
 //image:configure-controller-jobs-download-collections.png[Download collections]
 
