AAP-24690 Corrected attribute for automation controller in title.

--- a/downstream/modules/eda/proc-eda-set-up-token.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-token.adoc
@@ -1,6 +1,6 @@
 [id="eda-set-up-token-to-authenticate"]
 
-= Setting up a token to authenticate to {PlatformNameShort} Controller
+= Setting up a token to authenticate to {ControllerName}
 
 .Prerequisites
 
