--- a/downstream/modules/platform/proc-controller-define-schedule-exceptions.adoc
+++ b/downstream/modules/platform/proc-controller-define-schedule-exceptions.adoc
@@ -2,7 +2,7 @@
 
 = Setting exceptions to the schedule
 
-On the *Create Shedule* page, click btn:[Create exception].
+On the *Create Schedule* page, click btn:[Create exception].
 
 Use the same format as for the schedule rules to create a schedule exception.
 
