Removed sentence about expected behavior from the updated note, per SME

--- a/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
@@ -40,7 +40,7 @@ The content would be equivalent to the file passed through the `--vars` flag of 
 +
 [IMPORTANT]
 ====
-When a rulebook activation shuts down, any tasks that are waiting to be performed will be canceled, and an info level message will be sent to the activation log. This is expected behavior. For more information, see link:https://ansible.readthedocs.io/projects/rulebook/en/stable/rulebooks.html#[Rulebooks].
+When a rulebook activation shuts down, any tasks that are waiting to be performed will be canceled, and an info level message will be sent to the activation log. For more information, see link:https://ansible.readthedocs.io/projects/rulebook/en/stable/rulebooks.html#[Rulebooks].
 ====
 
 Your rulebook activation is now created and can be managed on the *Rulebook Activations* page.
