--- a/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
@@ -43,7 +43,7 @@ Your rulebook activation is now created and can be managed on the *Rulebook Acti
 After saving the new rulebook activation, the rulebook activation's details page is displayed.
 From there or the *Rulebook Activations* list view, you can edit or delete it.
 
-[IMPORTANT]
+[NOTE]
 ====
 Occasionally, when a source plugin shuts down, it causes a rulebook to exit gracefully after a certain amount of time. When a rulebook activation shuts down, any tasks that are waiting to be performed will be canceled, and an info level message will be sent to the activation log. For more information, see link:https://ansible.readthedocs.io/projects/rulebook/en/stable/rulebooks.html#[Rulebooks].
 ====
