Add notes about use of local users
Updated text

Documentation should clarify if local users are needed

https://issues.redhat.com/browse/AAP-19240

--- a/downstream/modules/platform/con-controller-secret-handling.adoc
+++ b/downstream/modules/platform/con-controller-secret-handling.adoc
@@ -10,17 +10,15 @@
 
 [NOTE]
 ====
-You must have a 'local' user access to configure any of the following:
+You must have 'local' user access for the following users:
 
-* PostgreSQL
-* AWX
+* postgres
+* awx
 * redis
 * receptor
 * nginx 
-* {ControllerName}
-* LDAP
 
-The local user account is used to configure access, but only after you are able to log in to {ControllerName}
+The `local` user can configure access, but only after you are able to log in to {ControllerName}
 ====
 
 == User passwords for local users
