--- a/downstream/assemblies/platform/assembly-ag-controller-secret-handling.adoc
+++ b/downstream/assemblies/platform/assembly-ag-controller-secret-handling.adoc
@@ -14,17 +14,15 @@ include::platform/ref-controller-secret-handling-automation-use.adoc[leveloffset
 
 [NOTE]
 ====
-You must have a 'local' user access to configure any of the following:
+You must have 'local' user access for the following users:
 
-* PostgreSQL
-* AWX
+* postgres
+* awx
 * redis
 * receptor
 * nginx 
-* {ControllerName}
-* LDAP
 
-The local user account is used to configure access, but only after you are able to log in to {ControllerName}
+The `local` user can configure access, but only after you are able to log in to {ControllerName}
 ====
 
 include::platform/ref-controller-internal-services.adoc[leveloffset=+2]
