--- a/downstream/modules/platform/ref-controller-configure-host-name-notifications.adoc
+++ b/downstream/modules/platform/ref-controller-configure-host-name-notifications.adoc
@@ -2,7 +2,7 @@
 
 = Configuring the `controllerhost` hostname for notifications
 
-In xref:controller-configure-system[System settings], you can replace `https://controller.example.com` in the *Base URL of the Service* field with your preferred hostname to change the notification hostname.
+From the *System settings* page, you can replace `https://controller.example.com` in the *Base URL of the Service* field with your preferred hostname to change the notification hostname.
 
 //image:configure-controller-system-misc-baseurl.png[Edit base URL]
 
