Restructure configuration chapter
Correction

Restructure Configuring Automation Controller chapter based on new UI

https://issues.redhat.com/browse/AAP-25063

--- a/downstream/modules/platform/proc-controller-configure-system.adoc
+++ b/downstream/modules/platform/proc-controller-configure-system.adoc
@@ -16,7 +16,7 @@ The *System* tab enables you to complete the following actions:
 
 . From the navigation panel, select {MenuAEAdminSettings}.
 . Click btn:[Edit].
-. Choose from the following *System* options:
+//. Choose from the following *System* options:
 //* *Miscellaneous System settings*: Enable activity streams, specify the default {ExecEnvShort}, define the base URL for the {ControllerName} host, enable {ControllerName} administration alerts, set user visibility, define analytics, specify usernames and passwords, and configure proxies.
 //* *Miscellaneous Authentication settings*: Configure options associated with authentication methods (built-in or SSO), sessions (timeout, number of sessions logged in, tokens), and social authentication mapping.
 //* *Logging settings*: Configure logging options based on the type you choose:
