Clouds: Update BaseURL attribute

--- a/attributes/attributes.adoc
+++ b/attributes/attributes.adoc
@@ -8,7 +8,7 @@
 :CentralAuth: central authentication
 :PlatformVers: 2.4
 :AnsibleCoreVers: 2.13
-:BaseURL: https://access.redhat.com/documentation/en-us
+:BaseURL: https://docs.redhat.com/en/documentation
 
 // AAP on Clouds
 :AAPonAzureName: Red Hat Ansible Automation Platform on Microsoft Azure
