--- a/stories/assembly-saas-intro.adoc
+++ b/stories/assembly-saas-intro.adoc
@@ -1,6 +1,9 @@
 ifdef::context[:parent-context: {context}]
 
+:context: saas-intro
+
 [id="saas-intro"]
 = Introduction to {SaaSonAWS}
 
-:context: saas-intro
+ifdef::parent-context[:context: {parent-context}]
+ifndef::parent-context[:!context:]
