--- a/stories/assembly-saas-planning.adoc
+++ b/stories/assembly-saas-planning.adoc
@@ -1,5 +1,6 @@
 ifdef::context[:parent-context: {context}]
 
+:context: saas-planning
 [id="saas-planning"]
 = Planning for {SaaSonAWS}
 Before setting up your {SaaSonAWS} review the following sections for a comprehensive understanding of the required configurations to plan your deployment effectively. 
@@ -8,4 +9,7 @@ Before setting up your {SaaSonAWS} review the following sections for a comprehen
 include::topics/con-saas-intro.adoc[leveloffset=+1]
 include::topics/ref-saas-default-configs.adoc[leveloffset=+1]
 include::topics/ref-saas-planning-configs.adoc[leveloffset=+1]
-:context: saas-planning
+
+ifdef::parent-context[:context: {parent-context}]
+ifndef::parent-context[:!context:]
+
