--- a/stories/assembly-saas-set-up.adoc
+++ b/stories/assembly-saas-set-up.adoc
@@ -1,5 +1,6 @@
 ifdef::context[:parent-context: {context}]
 
+:context: saas-set-up
 [id="saas-set-up"]
 = Setting up {SaaSonAWS}
 
@@ -16,4 +17,6 @@ When you link your accounts you can configure your cluster through the *Provisio
 include::topics/proc-saas-set-up-public.adoc[leveloffset=+1]
 include::topics/proc-saas-set-up-private.adoc[leveloffset=+1]
 
-:context: saas-set-up
+ifdef::parent-context[:context: {parent-context}]
+ifndef::parent-context[:!context:]
+
