AAP-25255: Restructured existing Lightspeed configuration content and removed WCA acronym

--- a/lightspeed/modules/con_wca-key-model-id.adoc
+++ b/lightspeed/modules/con_wca-key-model-id.adoc
@@ -1,19 +1,25 @@
 :_content-type: CONCEPT
 
 [id="wca-key-model-id_{context}"]
-= About the Watsonx Code Assistant key and model ID
+= Configuration requirements
 
-You need the following {ibmwatsonxcodeassistant} information to connect {LightspeedShortName} to your {ibmwatsonxcodeassistant}:
+To use {LightspeedFullName}, your organization must have the following subscriptions:
 
-* *Watsonx Code Assistant (WCA) API key*
+* A trial or paid subscription to {PlatformNameShort} 
+
+* A trial or paid subscription to {ibmwatsonxcodeassistant}
+
+You need the following {ibmwatsonxcodeassistant} information:
+
+* *API key*
 +
-A WCA API key authenticates all requests made from {LightspeedShortName} to {ibmwatsonxcodeassistant}. Each Red Hat organization with a valid {PlatformNameShort} subscription must have a configured WCA API key. When an authenticated {RHSSOshort} user creates a task request in {LightspeedShortName}, the WCA API key associated with the user's Red Hat organization is used to authenticate the request to {ibmwatsonxcodeassistant}. 
+A unique API key authenticates all requests made from {LightspeedShortName} to {ibmwatsonxcodeassistant}. Each Red Hat organization with a valid {PlatformNameShort} subscription must have a configured API key. When an authenticated {RHSSOshort} user creates a task request in {LightspeedShortName}, the API key associated with the user's Red Hat organization is used to authenticate the request to {ibmwatsonxcodeassistant}. 
 
 * *Model ID*
 +
-A unique WCA model ID identifies an {ibmwatsonxcodeassistant} model in your IBM Cloud account. The model ID that you configure in the Ansible Lightspeed administrator portal is used as the default model, and can be accessed by all Ansible Lightspeed users within your organization. 
+A unique model ID identifies an {ibmwatsonxcodeassistant} model in your IBM Cloud account. The model ID that you configure in the Ansible Lightspeed administrator portal is used as the default model, and can be accessed by all Ansible Lightspeed users within your organization. 
  
-IMPORTANT: You must configure both the WCA key and the model ID when you are initially configuring {LightspeedShortName}. 
+IMPORTANT: You must configure both the API key and the model ID when you are initially configuring {LightspeedShortName}. 
 
 
 
