--- a/lightspeed/modules/proc_obtain-config-wca-and-model-id.adoc
+++ b/lightspeed/modules/proc_obtain-config-wca-and-model-id.adoc
@@ -1,22 +1,24 @@
 :_content-type: PROCEDURE
 
 [id="obtain-config-wca-and-model-id_{context}"]
-= Connecting Red Hat Ansible Lightspeed to IBM watsonx Code Assistant
+= Configuring {LightspeedShortName} cloud service
+
+Use this procedure to configure the {LightspeedShortName} cloud service.
 
 .Prerequisites
 
-* You have obtained a WCA API key and a model ID from the {ibmwatsonxcodeassistant} that you want to use in {LightspeedShortName}.
+* You have obtained an API key and a model ID from {ibmwatsonxcodeassistant} that you want to use in {LightspeedShortName}.
 +
-For information about how to obtain a WCA API key and model ID from {ibmwatsonxcodeassistant}, see the link:https://cloud.ibm.com/docs/watsonx-code-assistant[{ibmwatsonxcodeassistant} documentation].
+For information about how to obtain an API key and model ID from {ibmwatsonxcodeassistant}, see the link:https://cloud.ibm.com/docs/watsonx-code-assistant[{ibmwatsonxcodeassistant} documentation].
 
 .Procedure
 
 . Log in to the link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal] as an organization administrator.
 . From the login screen, click *Admin Portal*.
-. Specify the WCA key of your {ibmwatsonxcodeassistant} instance:
+. Specify the API key of your {ibmwatsonxcodeassistant} instance:
 .. Under *IBM Cloud API Key*, click *Add API key*. A screen to enter the *API Key* is displayed. 
 .. Enter the API Key.
-.. Optional: Click *Test* to validate the WCA key.
+.. Optional: Click *Test* to validate the API key.
 .. Click *Save*.
 . Specify the model ID of the model that you want to use:
 .. Click *Model Settings*. 
@@ -25,7 +27,7 @@ For information about how to obtain a WCA API key and model ID from {ibmwatsonxc
 .. Optional: Click *Test model ID* to validate the model ID.
 .. Click *Save*.
 +
-When the WCA API key and model ID is successfully validated, {LightspeedShortName} is connected to your {ibmwatsonxcodeassistant} instance.
+When the API key and model ID is successfully validated, {LightspeedShortName} is connected to your {ibmwatsonxcodeassistant} instance.
 
 [role="_additional-resources"]
 == Additional resources
