--- a/lightspeed/modules/proc_troubleshooting-lightspeed-config.adoc
+++ b/lightspeed/modules/proc_troubleshooting-lightspeed-config.adoc
@@ -11,13 +11,13 @@ If you are the Red Hat organization administrator, before you access the Ansible
 
 * You have a valid {PlatformNameShort} subscription.
 
-== Cannot save the WCA key
+== Cannot save the API key
 
-When you enter the Watsonx Code Assistant (WCA) API key, authentication fails and shows the following error message: 
+When you enter the {ibmwatsonxcodeassistant} API key, authentication fails and shows the following error message: 
 
 `IBM Cloud API key is invalid`
 
-{LightspeedShortName} verifies the WCA API key by generating an associated access token. To resolve the error, ensure that you have not accidentally included any extra spaces when obtaining the WCA API key from {ibmwatsonxcodeassistant}. If you still cannot upload the WCA key, contact link:https://cloud.ibm.com/docs/get-support?topic=get-support-open-case[IBM Support].
+{LightspeedShortName} verifies the API key by generating an associated access token. To resolve the error, ensure that you have not accidentally included any extra spaces when obtaining the API key from {ibmwatsonxcodeassistant}. If you still cannot upload the API key, contact link:https://cloud.ibm.com/docs/get-support?topic=get-support-open-case[IBM Support].
 
 == Cannot configure the model ID due to authentication failure
 
@@ -25,7 +25,7 @@ When you enter the model ID in the {LightspeedShortName} administrator portal, t
 
 To resolve the error, ensure that: 
 
-* You have configured a valid WCA API key before you upload the model ID.
+* You have configured a valid API key before you upload the model ID.
 * You have not accidentally included any extra spaces when entering the model ID. 
 
 == Cannot configure the model ID due to inference failure
@@ -34,5 +34,5 @@ While validating the model ID, {LightspeedShortName} performs a test inference. 
 
 To resolve the error, ensure that: 
 
-* You have a valid WCA API key and model ID. 
-* You have not accidentally included any extra spaces when obtaining the WCA key and model ID from {ibmwatsonxcodeassistant}.
+* You have a valid API key and model ID. 
+* You have not accidentally included any extra spaces when obtaining the API key and model ID from {ibmwatsonxcodeassistant}.
