--- a/lightspeed/assemblies/assembly_configure-code-assistant.adoc
+++ b/lightspeed/assemblies/assembly_configure-code-assistant.adoc
@@ -3,16 +3,16 @@ ifdef::context[:parent-context: {context}]
 :_content-type: ASSEMBLY
 
 
-[id="configure-code-assistant_{context}"]
+[id="configure-lightspeed-cloud-service_{context}"]
 
-= Configuring {LightspeedShortName} to connect with {ibmwatsonxcodeassistant}
+= Setting up {LightspeedShortName} cloud service
 
-:context: configure-code-assistant
+:context: configure-lightspeed-cloud-service
 
 [role="_abstract"]
-As a Red Hat customer portal administrator, you must configure {LightspeedShortName} to connect to your {ibmwatsonxcodeassistant} instance. 
+As a Red Hat customer portal administrator, you must configure {LightspeedShortName} cloud service to connect to your {ibmwatsonxcodeassistant} instance. 
 
-include::modules/con_wca-key-model-id.adoc[leveloffset=+1]
+include::modules/proc_log-in-administrator-portal.adoc[leveloffset=+1]
 include::modules/proc_obtain-config-wca-and-model-id.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
