--- a/lightspeed/modules/proc_configure-vscode-extension.adoc
+++ b/lightspeed/modules/proc_configure-vscode-extension.adoc
@@ -3,7 +3,7 @@
 [id="configure-vscode-extension_{context}"]
 = Configuring the Ansible VS Code extension
 
-You can configure the Ansible VS Code extension to enable {LightspeedshortName} and specify it's portal URL and WCA model ID.
+You can configure the Ansible VS Code extension to enable {LightspeedshortName} and specify it's portal URL and {ibmwatsonxcodeassistant} model ID.
 
 .Prerequisites
 
