--- a/lightspeed/modules/proc_log-in-administrator-portal.adoc
+++ b/lightspeed/modules/proc_log-in-administrator-portal.adoc
@@ -3,6 +3,7 @@
 [id="log-in-administrator-portal_{context}"]
 = Logging in to the Ansible Lightspeed administrator portal
 
+Use the Ansible Lightspeed administrator portal to connect {LightspeedShortName} to {ibmwatsonxcodeassistant}.
 
 .Prerequisites
 
