Controller User Guide 2.5 edits
Controller User Guide UI updates chapters 12-23

https://issues.redhat.com/browse/AAP-23673

Affects `controller-user-guide`

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -192,12 +192,12 @@
 :MenuAEAdminWorkflowApprovals: menu:{MenuTopAE}[Administration > Workflow Approvals]
 :MenuAEAdminJobNotifications: menu:{MenuTopAE}[Administration > Notifiers]
 :MenuAEAdminManageJobs: menu:{MenuTopAE}[Administration > Management Jobs]
-:MenuAEAdminOauthApps: menu:{MenuTopAE}[Administration > OAuth Applications]
 
 //Each of the services previously had selections for access which will be centralized in 2.5, ultimately these should be changed to use the attributes in Access Management menu selections but I'm leaving these for later cleanup to avoid possible errors:
 :MenuControllerOrganizations: menu:{MenuAM}[Organizations]
 :MenuControllerUsers: menu:{MenuAM}[Users]
 :MenuControllerTeams: menu:{MenuAM}[Teams]
+:MenuControllerOAuthApplications: menu:{MenuAM}[OAuth Applications]
 
 // Automation Decisions (aka event driven automation menu selections)
 :MenuADRuleAudit: menu:{MenuAD}[Rule Audit]
@@ -250,6 +250,7 @@
 :MenuAMTeams: menu:{MenuAM}[Teams]
 :MenuAMUsers: menu:{MenuAM}[Users]
 :MenuAMRoles: menu:{MenuAM}[Roles]
+:MenuAEAdminOauthApps: menu:{MenuTopAE}[OAuth Applications]
 :MenuAMCredentials: menu:{MenuAM}[Credentials]
 :MenuAMCredentialType: menu:{MenuAM}[Credential Types]
 
