Tech review edits applied to SaaS docs

--- a/stories/assembly-saas-set-up.adoc
+++ b/stories/assembly-saas-set-up.adoc
@@ -4,11 +4,9 @@ ifdef::context[:parent-context: {context}]
 [id="saas-set-up"]
 = Setting up {SaaSonAWS}
 
-{SaaSonAWS} users have access to {PlatformNameShort} (AAP) without the need to manage the infrastructure. 
-{SaaSonAWSShort} deploys and configures a Red{nbsp}Hat OpenShift Service on AWS (ROSA) cluster for you. 
-SaaS deploys on top of your ROSA cluster, which enables you to run it on the {OCPShort} (OCP).
+{SaaSonAWS} users have access to {PlatformNameShort} without the need to manage the infrastructure. 
 
-To set up {SaaSonAWS} you must link your AWS and Red Hat accounts through the AWS marketplace.
+To set up {SaaSonAWS} you must link your {AWS} (AWS) and Red Hat accounts through the AWS marketplace.
 When you link your accounts you can configure your cluster through the *Provision environment* page on the Red Hat Hybrid Cloud Console.  
 
 .Prerequisites
