--- a/stories/topics/con-saas-intro.adoc
+++ b/stories/topics/con-saas-intro.adoc
@@ -1,7 +1,7 @@
 [id="con-saas-intro"]
 = Introduction 
 {SaaSonAWS} links your {AWS} (AWS) offering to your Red{nbsp}Hat account which enables access to {PlatformNameShort}. 
-When you subscribe to {SaaSonAWSShort}, Red{nbsp}Hat deploys and configures a cluster for you on the {PlatformNameShort}. 
+When you subscribe to {SaaSonAWSShort}, Red{nbsp}Hat deploys and configures an  {PlatformNameShort} environment for you. 
 
 From here you can access the control plane which allows you to run and manage your automation. You can run automation through mesh ingress or self-managed hop nodes. 
 You can connect execution nodes through an egress model from your environment using mesh ingress.
