--- a/stories/topics/proc-saas-set-up-public.adoc
+++ b/stories/topics/proc-saas-set-up-public.adoc
@@ -2,30 +2,31 @@
 
 = Subscribing to {SaaSonAWS} from the AWS Marketplace
 
-As an {AWS} (AWS) customer you can search for and subscribe to {SaaSonAWS} from the AWS Marketplace. 
+As an AWS customer you can search for and subscribe to {SaaSonAWS} from the AWS Marketplace. 
 
 
 .Procedure
-. Log in to your {AWS} account.
-. From the AWS Marketplace search bar, search for "Red Hat subscriptions." 
-** You can select *Red{nbsp}Hat* or *Red{nbsp}Hat Limited*
-+
-image::AWS_MP.png[AWS Marketplace search page]
-. From the *Contracts options* page enter your required quantity in the *RHAAP* field.
-+
-image::AWS_MP2.png[AWS contracts page]
-. Click btn:[View purchase options]
-. Click btn:[Pay now] 
-+ This redirects you to {RHSSO} to create an account, or to log in if you already have an account.
-** If the AWS account you are subscribing from is not already associated with your Red{nbsp}Hat account it redirects to a page where you can do so. Once you have successfully associated your AWS account with your Red{nbsp}Hat account continue to step 6.
-. You are redirected to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console.
-. Configure your {PlatformNameShort} environment:
-** *Cloud Product Code*: This populates automatically
-** *Red{nbsp}Hat customer ID*: This populates automatically
-** *AWS account ID*: Enter your AWS account ID
-** *Environment type*: Select *Public cloud* or *Private cloud*
-** *Region*: Select the region that you want your cluster to be in
-** *Email*: Enter the email address you want to associate with this provision environment
+. Log in to your AWS account.
+. Navigate to the AWS Marketplace.
+. Go to the *Discover products* page.
+. In the search bar, search for "{SaaSonAWS}." 
+** Depending on your region select one of the following: 
+*** For EMEA, select *Red{nbsp}Hat Limited*.
+*** For the rest of world, select *Red{nbsp}Hat*.
+. Click btn:[View purchase options].
+. Select your desired contract duration.
+. Click btn:[auto renewal settings] if you would like your contract to auto renew.
+. Select the contract options.
+. Optional: Add a purchase order number.
+. Click btn:[Create contract].
+. Click btn:[Click here to set up your account]. This redirects you to {RHSSO} where you need to:
+.. Create or sign into your Red{nbsp}Hat account.
+.. Link your AWS account to the Red{nbsp}Hat account.
+. This then directs you to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console. Here you can start configuring your environment. 
+. Enter your AWS account ID.
+. Once your AWS ID is validated click btn:[Next].
+. Select your desired region.
+. Enter your email address. You will receive a notification at this email when your environment is ready.
 . Click btn:[Provision].
 
 This redirects you to the *Instances* page which displays all the details of the instance you created. From here you can confirm if your instance is *Assigned* or still in a *Pending* state.
