--- a/attributes/attributes.adoc
+++ b/attributes/attributes.adoc
@@ -24,8 +24,8 @@
 :Registry: registry.redhat.io
 :ImageRef: 2.4.20240215
 :PrevImageRef: 2.4.20231024
-:SaaSonAWS: Red Hat Ansible Automation Platform as a Service on AWS
-:SaaSonAWSShort: Ansible Automation Platform on AWS
+:SaaSonAWS: Red Hat Ansible Automation Platform Service on AWS
+:SaaSonAWSShort: Ansible Automation Platform Service on AWS
 
 // Automation Mesh
 :AutomationMesh: automation mesh
