--- a/stories/topics/proc-saas-set-up-private.adoc
+++ b/stories/topics/proc-saas-set-up-private.adoc
@@ -6,19 +6,17 @@ The offer has a set expiration date, if you do not accept the private offer by t
 
 .Procedure
 . A Red{nbsp}Hat seller issues you a purchase order and provides it to you by email.
-** Alternatively, for manual steps see link:https://docs.aws.amazon.com/marketplace/latest/buyerguide/buyer-private-offers.html#buyer-private-offers-subscribing[Viewing and subscribing to a private offer] page on the AWS Marketplace
+** For manual steps see link:https://docs.aws.amazon.com/marketplace/latest/buyerguide/buyer-private-offers.html#buyer-private-offers-subscribing[Viewing and subscribing to a private offer] page on the AWS Marketplace
 . Click the link in the email to accept the terms.
-. Click btn:[Pay now].
-+ This directs you to {RHSSO} to create an account, or to log in if you already have an account.
-** If the AWS account you are subscribing from is not already associated with your Red{nbsp}Hat account it redirects you to a page where you can do so. When have successfully associated your AWS account with your Red{nbsp}Hat account continue to step 5.
-. You are redirected to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console.
-. Configure your {PlatformNameShort} environment:
-** *Cloud Product Code*: This populates automatically
-** *Red{nbsp}Hat customer ID*: This populates automatically
-** *AWS account ID*: Enter your AWS account ID
-** *Environment type*: Select *Public cloud* or *Private cloud*
-** *Region*: Select the region that you want your cluster to be in
-** *Email*: Enter the email address you want to associate with this provision environment
+. Click btn:[Create contract].
+. Click btn:[Click here to set up your account]. This redirects you to {RHSSO} where you need to:
+.. Create or sign into your Red{nbsp}Hat account.
+.. Link your AWS account to the Red{nbsp}Hat account.
+. This then directs you to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console. Here you can start configuring your environment. 
+. Enter your AWS account ID.
+. Once your AWS ID is validated click btn:[Next].
+. Select your desired region.
+. Enter your email address. You will receive a notification at this email when your environment is ready.
 . Click btn:[Provision].
 
 This redirects you to the *Instances* page which displays all the details of the instance you created. From here you can confirm if your instance is *Assigned* or still in a *Pending* state.
