AAP-25121 Azure: Add limited support info

--- a/stories/assembly-azure-support.adoc
+++ b/stories/assembly-azure-support.adoc
@@ -53,3 +53,5 @@ These situations are identified by Red Hat during maintenance or daily operation
 You must exclude the enforcement of Azure Policy, for example by using exceptions, on resources associated with the managed application.
 
 For more information about working with Azure Policy, see the link:https://access.redhat.com/articles/7013454[Azure Policy and Ansible on Azure] article on the Red Hat customer portal.
+
+include::topics/ref-azure-limited-support-status.adoc[leveloffset=+1]
