AAP-20958: Created docs for Lightspeed on-premise deployment feature

--- a/lightspeed/assemblies/assembly_managing-admin-dashboard-telemetry.adoc
+++ b/lightspeed/assemblies/assembly_managing-admin-dashboard-telemetry.adoc
@@ -20,6 +20,11 @@ This is the data that is required to operate and troubleshoot the Ansible Lights
 +
 This is the data that provides insight into how your organization users are using the Ansible Lightspeed service, and the metrics are displayed on the Admin dashboard. You can also disable the Admin dashboard telemetry if you no longer want to collect and monitor the telemetry data.  
 
+[NOTE]
+====
+Viewing telemetry data on the Admin dashboard is not yet supported on {LightspeedShortName} on-premise deployments.
+====
+
 == Prerequisites
 To view and manage the Admin dashboard telemetry data, ensure that you have the following:
 
