--- a/lightspeed/modules/con_wca-key-model-id.adoc
+++ b/lightspeed/modules/con_wca-key-model-id.adoc
@@ -5,7 +5,7 @@
 
 To use {LightspeedFullName}, your organization must have the following subscriptions:
 
-* A trial or paid subscription to {PlatformNameShort} 
+* A trial or paid subscription to {PlatformName} 
 
 * A trial or paid subscription to {ibmwatsonxcodeassistant}
 
