--- a/lightspeed/modules/proc_install-vscode-extension.adoc
+++ b/lightspeed/modules/proc_install-vscode-extension.adoc
@@ -2,7 +2,7 @@
 
 [id="install-vscode-extension_{context}"]
 
-= Installing the Ansible VS Code Extension
+= Installing the Ansible VS Code extension
 
 .Prerequisites
 
